src/objects/Fulfillment_Bundle__c.object
<CustomObject>
    <description>This object is used to create bundles and attach components to those bundles.  This prevents agents from having to select items individually to ensure proper items are sent.</description>
    <fields>
        <fullName>Bundle_Name__c</fullName>
        <label>Bundle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Parent_ID__c</fullName>
        <formula>Fulfillment_Item__r.Fulfillment_Item_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle Parent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Active_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comp Active 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_Active_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comp Active 11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_Active_12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comp Active 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_ID_10__c</fullName>
        <label>Comp ID 10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_ID_11__c</fullName>
        <label>Comp ID 11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_ID_12__c</fullName>
        <label>Comp ID 12</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Name_10__c</fullName>
        <label>Comp Name 10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Name_11__c</fullName>
        <label>Comp Name 11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Name_12__c</fullName>
        <label>Comp Name 12</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Quantity_10__c</fullName>
        <label>Comp Quantity 10</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Quantity_11__c</fullName>
        <label>Comp Quantity 11</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Quantity_12__c</fullName>
        <label>Comp Quantity 12</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A list of Fulfillment Items</description>
        <label>Fulfillment Item</label>
        <referenceTo>Fulfillment_Item__c</referenceTo>
        <relationshipLabel>Fulfillment Bundles</relationshipLabel>
        <relationshipName>Fulfillment_Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_SKU__c</fullName>
        <label>Parent SKU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resend</label>
        <type>Checkbox</type>
    </fields>
    <label>Fulfillment Bundle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_SKU__c</columns>
        <columns>Bundle_Name__c</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_View</fullName>
        <columns>NAME</columns>
        <columns>Parent_SKU__c</columns>
        <columns>Bundle_Name__c</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_SKU__c</field>
            <operation>equals</operation>
            <value>BDCAND01231602</value>
        </filters>
        <label>My View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BUN-{000000}</displayFormat>
        <label>Fulfillment Bundle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>